<resources>
    <string name="app_name">GrzybekApk</string>
    <string name="log_button">Zaloguj przez USOS</string>
    <string name="menu_ekran_glowny">Ekran główny</string>
    <string name="menu_moje_wydarzenia">Moje wydarzenia</string>
    <string name="menu_utworz_wydarzenie">Utwórz wydarzenie</string>
    <string name="menu_kalendarz">Kalendarz</string>
    <string name="default_date">Data</string>
    <string name="default_time">Godzina</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="eventName">TextView</string>
    <string name="organizator">Organizator:</string>
    <string name="data">Rozpoczęcie:</string>
    <string name="eventText">textview</string>
    <string name="log_out">Wyloguj</string>
    <string name="msg_subscribed">Subscribed to notifications"</string>
    <string name="msg_subscribe_failed">Failed to subscribe to notifications</string>
    <string name="fcm_message">Wydarzonko</string>
    <string name="eventGoingT">Wypisz się</string>
    <string name="eventGoingN">Zapisz się!</string>
    <string name="uczestnicy">Uczestnicy</string>
</resources>
