<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activities.EventDetailsActivity" android:background="@color/bpLine_background">
    <android.support.v7.widget.CardView
            android:layout_width="344dp"
            android:id="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@color/bpWhite" android:layout_height="163dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="@string/eventText"
                    android:layout_width="109dp"
                    android:layout_height="22dp"
                    android:id="@+id/eventOrganizer"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="52dp"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/eventName"
                    app:layout_constraintVertical_bias="0.15"/>
            <TextView
                    android:text="@string/organizator"
                    android:layout_width="107dp"
                    android:layout_height="22dp"
                    android:id="@+id/textView5"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toStartOf="@+id/eventOrganizer" android:layout_marginEnd="8dp"
                    app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/eventName"/>
            <TextView
                    android:text="@string/eventName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/eventName"
                    android:textSize="30sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
                    android:fontFamily="sans-serif" android:textStyle="bold"
                    android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                    android:text="@string/data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="16dp" android:id="@+id/textView6" android:textSize="18sp"
                    android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView5"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
            android:layout_width="344dp"
            android:layout_height="0dp" android:id="@+id/cardView2"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:cardBackgroundColor="@color/bpWhite" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/cardView"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="textview"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:id="@+id/eventDescription"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:textSize="18sp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>